# ChessC

./: .gitignore  CMakeLists.txt  README.md
include/: chessc.h
src/: check.cpp  chessboard.cpp  fen.cpp  move.cpp  solver.cpp
